// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo secretstore export "frodo secretstore export --global --secretstore-id EnvironmentAndSystemPropertySecretStore --secretstore-type EnvironmentAndSystemPropertySecretStore --type classic": should export the global EnvironmentAndSystemPropertySecretStore secret store 1`] = `0`;

exports[`frodo secretstore export "frodo secretstore export --global --secretstore-id EnvironmentAndSystemPropertySecretStore --secretstore-type EnvironmentAndSystemPropertySecretStore --type classic": should export the global EnvironmentAndSystemPropertySecretStore secret store 2`] = `""`;

exports[`frodo secretstore export "frodo secretstore export --global --secretstore-id EnvironmentAndSystemPropertySecretStore --secretstore-type EnvironmentAndSystemPropertySecretStore --type classic": should export the global EnvironmentAndSystemPropertySecretStore secret store: EnvironmentAndSystemPropertySecretStore.secretstore.json 1`] = `
{
  "meta": Any<Object>,
  "secretstore": {
    "EnvironmentAndSystemPropertySecretStore": {
      "_id": "",
      "_type": {
        "_id": "EnvironmentAndSystemPropertySecretStore",
        "collection": false,
        "name": "Environment and System Property Secrets Store",
      },
      "format": "BASE64",
    },
  },
}
`;

exports[`frodo secretstore export "frodo secretstore export -NAD secretStoreExportTestDir1": should export all seceretstores in realm to separate files 1`] = `0`;

exports[`frodo secretstore export "frodo secretstore export -NAD secretStoreExportTestDir1": should export all seceretstores in realm to separate files 2`] = `""`;

exports[`frodo secretstore export "frodo secretstore export -NAD secretStoreExportTestDir1": should export all seceretstores in realm to separate files: secretStoreExportTestDir1/ESV.secretstore.json 1`] = `
{
  "secretstore": {
    "ESV": {
      "_id": "ESV",
      "_type": {
        "_id": "GoogleSecretManagerSecretStoreProvider",
        "collection": true,
        "name": "Google Secret Manager",
      },
      "expiryDurationSeconds": 600,
      "mappings": [
        {
          "_id": "am.services.httpclient.mtls.clientcert.testClientCert.secret",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "esv-test-client-cert",
          ],
          "secretId": "am.services.httpclient.mtls.clientcert.testClientCert.secret",
        },
      ],
      "project": "&{google.project.id}",
      "secretFormat": "PEM",
      "serviceAccount": "default",
    },
  },
}
`;

exports[`frodo secretstore export "frodo secretstore export -Na": should export all secretstores in realm to file 1`] = `0`;

exports[`frodo secretstore export "frodo secretstore export -Na": should export all secretstores in realm to file 2`] = `""`;

exports[`frodo secretstore export "frodo secretstore export -Na": should export all secretstores in realm to file: allAlphaSecretStores.secretstore.json 1`] = `
{
  "secretstore": {
    "ESV": {
      "_id": "ESV",
      "_type": {
        "_id": "GoogleSecretManagerSecretStoreProvider",
        "collection": true,
        "name": "Google Secret Manager",
      },
      "expiryDurationSeconds": 600,
      "mappings": [
        {
          "_id": "am.services.httpclient.mtls.clientcert.testClientCert.secret",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "esv-test-client-cert",
          ],
          "secretId": "am.services.httpclient.mtls.clientcert.testClientCert.secret",
        },
      ],
      "project": "&{google.project.id}",
      "secretFormat": "PEM",
      "serviceAccount": "default",
    },
  },
}
`;

exports[`frodo secretstore export "frodo secretstore export -Ni ESV -t GoogleSecretManagerSecretStoreProvider -f myFrodoExport.secretstore.json": should export the ESV secret store 1`] = `0`;

exports[`frodo secretstore export "frodo secretstore export -Ni ESV -t GoogleSecretManagerSecretStoreProvider -f myFrodoExport.secretstore.json": should export the ESV secret store 2`] = `""`;

exports[`frodo secretstore export "frodo secretstore export -Ni ESV -t GoogleSecretManagerSecretStoreProvider -f myFrodoExport.secretstore.json": should export the ESV secret store: myFrodoExport.secretstore.json 1`] = `
{
  "secretstore": {
    "ESV": {
      "_id": "ESV",
      "_type": {
        "_id": "GoogleSecretManagerSecretStoreProvider",
        "collection": true,
        "name": "Google Secret Manager",
      },
      "expiryDurationSeconds": 600,
      "mappings": [
        {
          "_id": "am.services.httpclient.mtls.clientcert.testClientCert.secret",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "esv-test-client-cert",
          ],
          "secretId": "am.services.httpclient.mtls.clientcert.testClientCert.secret",
        },
      ],
      "project": "&{google.project.id}",
      "secretFormat": "PEM",
      "serviceAccount": "default",
    },
  },
}
`;

exports[`frodo secretstore export "frodo secretstore export -g --all -m classic": should export all global secretstores to file 1`] = `0`;

exports[`frodo secretstore export "frodo secretstore export -g --all -m classic": should export all global secretstores to file 2`] = `""`;

exports[`frodo secretstore export "frodo secretstore export -g --all -m classic": should export all global secretstores to file: allGlobalSecretStores.secretstore.json 1`] = `
{
  "meta": Any<Object>,
  "secretstore": {
    "EnvironmentAndSystemPropertySecretStore": {
      "_id": "EnvironmentAndSystemPropertySecretStore",
      "_type": {
        "_id": "EnvironmentAndSystemPropertySecretStore",
        "collection": false,
        "name": "Environment and System Property Secrets Store",
      },
      "format": "BASE64",
    },
    "default-keystore": {
      "_id": "default-keystore",
      "_type": {
        "_id": "KeyStoreSecretStore",
        "collection": true,
        "name": "Keystore",
      },
      "file": "/root/am/security/keystores/keystore.jceks",
      "keyEntryPassword": "entrypass",
      "leaseExpiryDuration": 5,
      "mappings": [
        {
          "_id": "am.applications.agents.remote.consent.request.signing.ES256",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es256test",
            "test",
            "test2",
            "test3",
            "test4",
          ],
          "secretId": "am.applications.agents.remote.consent.request.signing.ES256",
        },
        {
          "_id": "am.applications.agents.remote.consent.request.signing.ES384",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es384test",
          ],
          "secretId": "am.applications.agents.remote.consent.request.signing.ES384",
        },
        {
          "_id": "am.applications.agents.remote.consent.request.signing.ES512",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es512test",
          ],
          "secretId": "am.applications.agents.remote.consent.request.signing.ES512",
        },
        {
          "_id": "am.applications.agents.remote.consent.request.signing.RSA",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.applications.agents.remote.consent.request.signing.RSA",
        },
        {
          "_id": "am.authentication.nodes.persistentcookie.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.authentication.nodes.persistentcookie.encryption",
        },
        {
          "_id": "am.authn.authid.signing.HMAC",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "hmacsigningtest",
          ],
          "secretId": "am.authn.authid.signing.HMAC",
        },
        {
          "_id": "am.authn.trees.transientstate.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "directenctest",
          ],
          "secretId": "am.authn.trees.transientstate.encryption",
        },
        {
          "_id": "am.default.applications.federation.entity.providers.saml2.idp.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.default.applications.federation.entity.providers.saml2.idp.encryption",
        },
        {
          "_id": "am.default.applications.federation.entity.providers.saml2.idp.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.default.applications.federation.entity.providers.saml2.idp.signing",
        },
        {
          "_id": "am.default.applications.federation.entity.providers.saml2.sp.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.default.applications.federation.entity.providers.saml2.sp.encryption",
        },
        {
          "_id": "am.default.applications.federation.entity.providers.saml2.sp.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.default.applications.federation.entity.providers.saml2.sp.signing",
        },
        {
          "_id": "am.default.authentication.modules.persistentcookie.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.default.authentication.modules.persistentcookie.encryption",
        },
        {
          "_id": "am.default.authentication.modules.persistentcookie.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "hmacsigningtest",
          ],
          "secretId": "am.default.authentication.modules.persistentcookie.signing",
        },
        {
          "_id": "am.default.authentication.nodes.persistentcookie.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "hmacsigningtest",
          ],
          "secretId": "am.default.authentication.nodes.persistentcookie.signing",
        },
        {
          "_id": "am.global.services.oauth2.oidc.agent.idtoken.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.global.services.oauth2.oidc.agent.idtoken.signing",
        },
        {
          "_id": "am.global.services.saml2.client.storage.jwt.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "directenctest",
          ],
          "secretId": "am.global.services.saml2.client.storage.jwt.encryption",
        },
        {
          "_id": "am.global.services.session.clientbased.encryption.AES",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "aestest",
          ],
          "secretId": "am.global.services.session.clientbased.encryption.AES",
        },
        {
          "_id": "am.global.services.session.clientbased.signing.HMAC",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "hmacsigningtest",
          ],
          "secretId": "am.global.services.session.clientbased.signing.HMAC",
        },
        {
          "_id": "am.services.iot.jwt.issuer.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "hmacsigningtest",
          ],
          "secretId": "am.services.iot.jwt.issuer.signing",
        },
        {
          "_id": "am.services.oauth2.jwt.authenticity.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "hmacsigningtest",
          ],
          "secretId": "am.services.oauth2.jwt.authenticity.signing",
        },
        {
          "_id": "am.services.oauth2.oidc.decryption.RSA.OAEP",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.services.oauth2.oidc.decryption.RSA.OAEP",
        },
        {
          "_id": "am.services.oauth2.oidc.decryption.RSA.OAEP.256",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.services.oauth2.oidc.decryption.RSA.OAEP.256",
        },
        {
          "_id": "am.services.oauth2.oidc.decryption.RSA1.5",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.services.oauth2.oidc.decryption.RSA1.5",
        },
        {
          "_id": "am.services.oauth2.oidc.rp.idtoken.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.services.oauth2.oidc.rp.idtoken.encryption",
        },
        {
          "_id": "am.services.oauth2.oidc.rp.jwt.authenticity.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.services.oauth2.oidc.rp.jwt.authenticity.signing",
        },
        {
          "_id": "am.services.oauth2.oidc.signing.ES256",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es256test",
          ],
          "secretId": "am.services.oauth2.oidc.signing.ES256",
        },
        {
          "_id": "am.services.oauth2.oidc.signing.ES384",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es384test",
          ],
          "secretId": "am.services.oauth2.oidc.signing.ES384",
        },
        {
          "_id": "am.services.oauth2.oidc.signing.ES512",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es512test",
          ],
          "secretId": "am.services.oauth2.oidc.signing.ES512",
        },
        {
          "_id": "am.services.oauth2.oidc.signing.RSA",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.services.oauth2.oidc.signing.RSA",
        },
        {
          "_id": "am.services.oauth2.remote.consent.request.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "selfserviceenctest",
          ],
          "secretId": "am.services.oauth2.remote.consent.request.encryption",
        },
        {
          "_id": "am.services.oauth2.remote.consent.response.decryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.services.oauth2.remote.consent.response.decryption",
        },
        {
          "_id": "am.services.oauth2.remote.consent.response.signing.RSA",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.services.oauth2.remote.consent.response.signing.RSA",
        },
        {
          "_id": "am.services.oauth2.stateless.signing.ES256",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es256test",
          ],
          "secretId": "am.services.oauth2.stateless.signing.ES256",
        },
        {
          "_id": "am.services.oauth2.stateless.signing.ES384",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es384test",
          ],
          "secretId": "am.services.oauth2.stateless.signing.ES384",
        },
        {
          "_id": "am.services.oauth2.stateless.signing.ES512",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es512test",
          ],
          "secretId": "am.services.oauth2.stateless.signing.ES512",
        },
        {
          "_id": "am.services.oauth2.stateless.signing.HMAC",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "hmacsigningtest",
          ],
          "secretId": "am.services.oauth2.stateless.signing.HMAC",
        },
        {
          "_id": "am.services.oauth2.stateless.signing.RSA",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.services.oauth2.stateless.signing.RSA",
        },
        {
          "_id": "am.services.oauth2.stateless.token.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "directenctest",
          ],
          "secretId": "am.services.oauth2.stateless.token.encryption",
        },
        {
          "_id": "am.services.saml2.metadata.signing.RSA",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.services.saml2.metadata.signing.RSA",
        },
        {
          "_id": "am.services.uma.pct.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "directenctest",
          ],
          "secretId": "am.services.uma.pct.encryption",
        },
      ],
      "providerName": "SunJCE",
      "storePassword": "storepass",
      "storetype": "JCEKS",
    },
    "default-passwords-store": {
      "_id": "default-passwords-store",
      "_type": {
        "_id": "FileSystemSecretStore",
        "collection": true,
        "name": "File System Secret Volumes",
      },
      "directory": "/root/am/security/secrets/encrypted",
      "format": "ENCRYPTED_PLAIN",
    },
  },
}
`;

exports[`frodo secretstore export "frodo secretstore export -gam classic --no-metadata --file myFrodoExport2.secretstore.json": should export all global secretstores to specific file with no metadata 1`] = `0`;

exports[`frodo secretstore export "frodo secretstore export -gam classic --no-metadata --file myFrodoExport2.secretstore.json": should export all global secretstores to specific file with no metadata 2`] = `""`;

exports[`frodo secretstore export "frodo secretstore export -gam classic --no-metadata --file myFrodoExport2.secretstore.json": should export all global secretstores to specific file with no metadata: myFrodoExport2.secretstore.json 1`] = `
{
  "secretstore": {
    "EnvironmentAndSystemPropertySecretStore": {
      "_id": "EnvironmentAndSystemPropertySecretStore",
      "_type": {
        "_id": "EnvironmentAndSystemPropertySecretStore",
        "collection": false,
        "name": "Environment and System Property Secrets Store",
      },
      "format": "BASE64",
    },
    "default-keystore": {
      "_id": "default-keystore",
      "_type": {
        "_id": "KeyStoreSecretStore",
        "collection": true,
        "name": "Keystore",
      },
      "file": "/root/am/security/keystores/keystore.jceks",
      "keyEntryPassword": "entrypass",
      "leaseExpiryDuration": 5,
      "mappings": [
        {
          "_id": "am.applications.agents.remote.consent.request.signing.ES256",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es256test",
            "test",
            "test2",
            "test3",
            "test4",
          ],
          "secretId": "am.applications.agents.remote.consent.request.signing.ES256",
        },
        {
          "_id": "am.applications.agents.remote.consent.request.signing.ES384",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es384test",
          ],
          "secretId": "am.applications.agents.remote.consent.request.signing.ES384",
        },
        {
          "_id": "am.applications.agents.remote.consent.request.signing.ES512",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es512test",
          ],
          "secretId": "am.applications.agents.remote.consent.request.signing.ES512",
        },
        {
          "_id": "am.applications.agents.remote.consent.request.signing.RSA",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.applications.agents.remote.consent.request.signing.RSA",
        },
        {
          "_id": "am.authentication.nodes.persistentcookie.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.authentication.nodes.persistentcookie.encryption",
        },
        {
          "_id": "am.authn.authid.signing.HMAC",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "hmacsigningtest",
          ],
          "secretId": "am.authn.authid.signing.HMAC",
        },
        {
          "_id": "am.authn.trees.transientstate.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "directenctest",
          ],
          "secretId": "am.authn.trees.transientstate.encryption",
        },
        {
          "_id": "am.default.applications.federation.entity.providers.saml2.idp.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.default.applications.federation.entity.providers.saml2.idp.encryption",
        },
        {
          "_id": "am.default.applications.federation.entity.providers.saml2.idp.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.default.applications.federation.entity.providers.saml2.idp.signing",
        },
        {
          "_id": "am.default.applications.federation.entity.providers.saml2.sp.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.default.applications.federation.entity.providers.saml2.sp.encryption",
        },
        {
          "_id": "am.default.applications.federation.entity.providers.saml2.sp.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.default.applications.federation.entity.providers.saml2.sp.signing",
        },
        {
          "_id": "am.default.authentication.modules.persistentcookie.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.default.authentication.modules.persistentcookie.encryption",
        },
        {
          "_id": "am.default.authentication.modules.persistentcookie.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "hmacsigningtest",
          ],
          "secretId": "am.default.authentication.modules.persistentcookie.signing",
        },
        {
          "_id": "am.default.authentication.nodes.persistentcookie.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "hmacsigningtest",
          ],
          "secretId": "am.default.authentication.nodes.persistentcookie.signing",
        },
        {
          "_id": "am.global.services.oauth2.oidc.agent.idtoken.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.global.services.oauth2.oidc.agent.idtoken.signing",
        },
        {
          "_id": "am.global.services.saml2.client.storage.jwt.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "directenctest",
          ],
          "secretId": "am.global.services.saml2.client.storage.jwt.encryption",
        },
        {
          "_id": "am.global.services.session.clientbased.encryption.AES",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "aestest",
          ],
          "secretId": "am.global.services.session.clientbased.encryption.AES",
        },
        {
          "_id": "am.global.services.session.clientbased.signing.HMAC",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "hmacsigningtest",
          ],
          "secretId": "am.global.services.session.clientbased.signing.HMAC",
        },
        {
          "_id": "am.services.iot.jwt.issuer.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "hmacsigningtest",
          ],
          "secretId": "am.services.iot.jwt.issuer.signing",
        },
        {
          "_id": "am.services.oauth2.jwt.authenticity.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "hmacsigningtest",
          ],
          "secretId": "am.services.oauth2.jwt.authenticity.signing",
        },
        {
          "_id": "am.services.oauth2.oidc.decryption.RSA.OAEP",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.services.oauth2.oidc.decryption.RSA.OAEP",
        },
        {
          "_id": "am.services.oauth2.oidc.decryption.RSA.OAEP.256",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.services.oauth2.oidc.decryption.RSA.OAEP.256",
        },
        {
          "_id": "am.services.oauth2.oidc.decryption.RSA1.5",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.services.oauth2.oidc.decryption.RSA1.5",
        },
        {
          "_id": "am.services.oauth2.oidc.rp.idtoken.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.services.oauth2.oidc.rp.idtoken.encryption",
        },
        {
          "_id": "am.services.oauth2.oidc.rp.jwt.authenticity.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.services.oauth2.oidc.rp.jwt.authenticity.signing",
        },
        {
          "_id": "am.services.oauth2.oidc.signing.ES256",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es256test",
          ],
          "secretId": "am.services.oauth2.oidc.signing.ES256",
        },
        {
          "_id": "am.services.oauth2.oidc.signing.ES384",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es384test",
          ],
          "secretId": "am.services.oauth2.oidc.signing.ES384",
        },
        {
          "_id": "am.services.oauth2.oidc.signing.ES512",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es512test",
          ],
          "secretId": "am.services.oauth2.oidc.signing.ES512",
        },
        {
          "_id": "am.services.oauth2.oidc.signing.RSA",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.services.oauth2.oidc.signing.RSA",
        },
        {
          "_id": "am.services.oauth2.remote.consent.request.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "selfserviceenctest",
          ],
          "secretId": "am.services.oauth2.remote.consent.request.encryption",
        },
        {
          "_id": "am.services.oauth2.remote.consent.response.decryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.services.oauth2.remote.consent.response.decryption",
        },
        {
          "_id": "am.services.oauth2.remote.consent.response.signing.RSA",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.services.oauth2.remote.consent.response.signing.RSA",
        },
        {
          "_id": "am.services.oauth2.stateless.signing.ES256",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es256test",
          ],
          "secretId": "am.services.oauth2.stateless.signing.ES256",
        },
        {
          "_id": "am.services.oauth2.stateless.signing.ES384",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es384test",
          ],
          "secretId": "am.services.oauth2.stateless.signing.ES384",
        },
        {
          "_id": "am.services.oauth2.stateless.signing.ES512",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es512test",
          ],
          "secretId": "am.services.oauth2.stateless.signing.ES512",
        },
        {
          "_id": "am.services.oauth2.stateless.signing.HMAC",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "hmacsigningtest",
          ],
          "secretId": "am.services.oauth2.stateless.signing.HMAC",
        },
        {
          "_id": "am.services.oauth2.stateless.signing.RSA",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.services.oauth2.stateless.signing.RSA",
        },
        {
          "_id": "am.services.oauth2.stateless.token.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "directenctest",
          ],
          "secretId": "am.services.oauth2.stateless.token.encryption",
        },
        {
          "_id": "am.services.saml2.metadata.signing.RSA",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.services.saml2.metadata.signing.RSA",
        },
        {
          "_id": "am.services.uma.pct.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "directenctest",
          ],
          "secretId": "am.services.uma.pct.encryption",
        },
      ],
      "providerName": "SunJCE",
      "storePassword": "storepass",
      "storetype": "JCEKS",
    },
    "default-passwords-store": {
      "_id": "default-passwords-store",
      "_type": {
        "_id": "FileSystemSecretStore",
        "collection": true,
        "name": "File System Secret Volumes",
      },
      "directory": "/root/am/security/secrets/encrypted",
      "format": "ENCRYPTED_PLAIN",
    },
  },
}
`;

exports[`frodo secretstore export "frodo secretstore export -gm classic --all-separate --directory secretStoreExportTestDir2": should export all global seceretstores to separate files 1`] = `0`;

exports[`frodo secretstore export "frodo secretstore export -gm classic --all-separate --directory secretStoreExportTestDir2": should export all global seceretstores to separate files 2`] = `""`;

exports[`frodo secretstore export "frodo secretstore export -gm classic --all-separate --directory secretStoreExportTestDir2": should export all global seceretstores to separate files: secretStoreExportTestDir2/EnvironmentAndSystemPropertySecretStore.secretstore.json 1`] = `
{
  "meta": Any<Object>,
  "secretstore": {
    "EnvironmentAndSystemPropertySecretStore": {
      "_id": "EnvironmentAndSystemPropertySecretStore",
      "_type": {
        "_id": "EnvironmentAndSystemPropertySecretStore",
        "collection": false,
        "name": "Environment and System Property Secrets Store",
      },
      "format": "BASE64",
    },
  },
}
`;

exports[`frodo secretstore export "frodo secretstore export -gm classic --all-separate --directory secretStoreExportTestDir2": should export all global seceretstores to separate files: secretStoreExportTestDir2/default-keystore.secretstore.json 1`] = `
{
  "meta": Any<Object>,
  "secretstore": {
    "default-keystore": {
      "_id": "default-keystore",
      "_type": {
        "_id": "KeyStoreSecretStore",
        "collection": true,
        "name": "Keystore",
      },
      "file": "/root/am/security/keystores/keystore.jceks",
      "keyEntryPassword": "entrypass",
      "leaseExpiryDuration": 5,
      "mappings": [
        {
          "_id": "am.applications.agents.remote.consent.request.signing.ES256",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es256test",
            "test",
            "test2",
            "test3",
            "test4",
          ],
          "secretId": "am.applications.agents.remote.consent.request.signing.ES256",
        },
        {
          "_id": "am.applications.agents.remote.consent.request.signing.ES384",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es384test",
          ],
          "secretId": "am.applications.agents.remote.consent.request.signing.ES384",
        },
        {
          "_id": "am.applications.agents.remote.consent.request.signing.ES512",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es512test",
          ],
          "secretId": "am.applications.agents.remote.consent.request.signing.ES512",
        },
        {
          "_id": "am.applications.agents.remote.consent.request.signing.RSA",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.applications.agents.remote.consent.request.signing.RSA",
        },
        {
          "_id": "am.authentication.nodes.persistentcookie.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.authentication.nodes.persistentcookie.encryption",
        },
        {
          "_id": "am.authn.authid.signing.HMAC",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "hmacsigningtest",
          ],
          "secretId": "am.authn.authid.signing.HMAC",
        },
        {
          "_id": "am.authn.trees.transientstate.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "directenctest",
          ],
          "secretId": "am.authn.trees.transientstate.encryption",
        },
        {
          "_id": "am.default.applications.federation.entity.providers.saml2.idp.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.default.applications.federation.entity.providers.saml2.idp.encryption",
        },
        {
          "_id": "am.default.applications.federation.entity.providers.saml2.idp.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.default.applications.federation.entity.providers.saml2.idp.signing",
        },
        {
          "_id": "am.default.applications.federation.entity.providers.saml2.sp.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.default.applications.federation.entity.providers.saml2.sp.encryption",
        },
        {
          "_id": "am.default.applications.federation.entity.providers.saml2.sp.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.default.applications.federation.entity.providers.saml2.sp.signing",
        },
        {
          "_id": "am.default.authentication.modules.persistentcookie.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.default.authentication.modules.persistentcookie.encryption",
        },
        {
          "_id": "am.default.authentication.modules.persistentcookie.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "hmacsigningtest",
          ],
          "secretId": "am.default.authentication.modules.persistentcookie.signing",
        },
        {
          "_id": "am.default.authentication.nodes.persistentcookie.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "hmacsigningtest",
          ],
          "secretId": "am.default.authentication.nodes.persistentcookie.signing",
        },
        {
          "_id": "am.global.services.oauth2.oidc.agent.idtoken.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.global.services.oauth2.oidc.agent.idtoken.signing",
        },
        {
          "_id": "am.global.services.saml2.client.storage.jwt.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "directenctest",
          ],
          "secretId": "am.global.services.saml2.client.storage.jwt.encryption",
        },
        {
          "_id": "am.global.services.session.clientbased.encryption.AES",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "aestest",
          ],
          "secretId": "am.global.services.session.clientbased.encryption.AES",
        },
        {
          "_id": "am.global.services.session.clientbased.signing.HMAC",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "hmacsigningtest",
          ],
          "secretId": "am.global.services.session.clientbased.signing.HMAC",
        },
        {
          "_id": "am.services.iot.jwt.issuer.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "hmacsigningtest",
          ],
          "secretId": "am.services.iot.jwt.issuer.signing",
        },
        {
          "_id": "am.services.oauth2.jwt.authenticity.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "hmacsigningtest",
          ],
          "secretId": "am.services.oauth2.jwt.authenticity.signing",
        },
        {
          "_id": "am.services.oauth2.oidc.decryption.RSA.OAEP",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.services.oauth2.oidc.decryption.RSA.OAEP",
        },
        {
          "_id": "am.services.oauth2.oidc.decryption.RSA.OAEP.256",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.services.oauth2.oidc.decryption.RSA.OAEP.256",
        },
        {
          "_id": "am.services.oauth2.oidc.decryption.RSA1.5",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.services.oauth2.oidc.decryption.RSA1.5",
        },
        {
          "_id": "am.services.oauth2.oidc.rp.idtoken.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.services.oauth2.oidc.rp.idtoken.encryption",
        },
        {
          "_id": "am.services.oauth2.oidc.rp.jwt.authenticity.signing",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.services.oauth2.oidc.rp.jwt.authenticity.signing",
        },
        {
          "_id": "am.services.oauth2.oidc.signing.ES256",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es256test",
          ],
          "secretId": "am.services.oauth2.oidc.signing.ES256",
        },
        {
          "_id": "am.services.oauth2.oidc.signing.ES384",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es384test",
          ],
          "secretId": "am.services.oauth2.oidc.signing.ES384",
        },
        {
          "_id": "am.services.oauth2.oidc.signing.ES512",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es512test",
          ],
          "secretId": "am.services.oauth2.oidc.signing.ES512",
        },
        {
          "_id": "am.services.oauth2.oidc.signing.RSA",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.services.oauth2.oidc.signing.RSA",
        },
        {
          "_id": "am.services.oauth2.remote.consent.request.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "selfserviceenctest",
          ],
          "secretId": "am.services.oauth2.remote.consent.request.encryption",
        },
        {
          "_id": "am.services.oauth2.remote.consent.response.decryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "test",
          ],
          "secretId": "am.services.oauth2.remote.consent.response.decryption",
        },
        {
          "_id": "am.services.oauth2.remote.consent.response.signing.RSA",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.services.oauth2.remote.consent.response.signing.RSA",
        },
        {
          "_id": "am.services.oauth2.stateless.signing.ES256",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es256test",
          ],
          "secretId": "am.services.oauth2.stateless.signing.ES256",
        },
        {
          "_id": "am.services.oauth2.stateless.signing.ES384",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es384test",
          ],
          "secretId": "am.services.oauth2.stateless.signing.ES384",
        },
        {
          "_id": "am.services.oauth2.stateless.signing.ES512",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "es512test",
          ],
          "secretId": "am.services.oauth2.stateless.signing.ES512",
        },
        {
          "_id": "am.services.oauth2.stateless.signing.HMAC",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "hmacsigningtest",
          ],
          "secretId": "am.services.oauth2.stateless.signing.HMAC",
        },
        {
          "_id": "am.services.oauth2.stateless.signing.RSA",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.services.oauth2.stateless.signing.RSA",
        },
        {
          "_id": "am.services.oauth2.stateless.token.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "directenctest",
          ],
          "secretId": "am.services.oauth2.stateless.token.encryption",
        },
        {
          "_id": "am.services.saml2.metadata.signing.RSA",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "rsajwtsigningkey",
          ],
          "secretId": "am.services.saml2.metadata.signing.RSA",
        },
        {
          "_id": "am.services.uma.pct.encryption",
          "_type": {
            "_id": "mappings",
            "collection": true,
            "name": "Mappings",
          },
          "aliases": [
            "directenctest",
          ],
          "secretId": "am.services.uma.pct.encryption",
        },
      ],
      "providerName": "SunJCE",
      "storePassword": "storepass",
      "storetype": "JCEKS",
    },
  },
}
`;

exports[`frodo secretstore export "frodo secretstore export -gm classic --all-separate --directory secretStoreExportTestDir2": should export all global seceretstores to separate files: secretStoreExportTestDir2/default-passwords-store.secretstore.json 1`] = `
{
  "meta": Any<Object>,
  "secretstore": {
    "default-passwords-store": {
      "_id": "default-passwords-store",
      "_type": {
        "_id": "FileSystemSecretStore",
        "collection": true,
        "name": "File System Secret Volumes",
      },
      "directory": "/root/am/security/secrets/encrypted",
      "format": "ENCRYPTED_PLAIN",
    },
  },
}
`;
